# miraa-alternative

./: .gitignore  CONTRIBUTING.md  README.md  globalconfig.json  lyricextract.py  main.py  pyproject.toml  requirements.txt  vocalsep.py
docs/: flowchart backend.drawio
src/: dictlookup.py  globalconfig.json  globalfuncs.py  llm.py  llmfortitleextract.py  llmjptoen.py  lyricextract.py  lyricstimestampasr.py  lyricstimestamper.py  main.py  splittag.py  vocalsep.py  wordtagger.py  ytdown.py
src/backend/: dictlookup.py  globalfuncs.py  llmfortitleextract.py  llmjptoen.py  lyricextract.py  lyricstimestamper.py  main.py  transcribeforcealign.py  transcribesilerovad.py  vocalsep.py  ytdown.py
src/backend_new/: cli.py  downloader.py  geniusextractor.py  helper_funcs.py  lyrics.py  main.py  processing.py  translation_analysis.py
src/backend_new/core/: processing.py  translation_analysis.py  workflow.py
src/backend_new/extractors/: downloader.py  geniusextractor.py
src/backend_new/parsers/dicts/: base.py  dicts_dir_setup.py  parser.py
src/backend_new/utils/: constants.py  exceptions.py  helper_funcs.py  logger.py  structures.py
src/config/: globalconfig.json
src/helper_functions/: model_quantizer.py
src/helper_functions/.temp/: temp.py
src/helper_functions/models/: model_quantizer.py
