[project]
name = "miraa-alternative"
version = "1.0.0"
dependencies = [
    "questionary",
    "base58",
    "coloredlogs",
    "requests",
    "python-dotenv",
    "yt-dlp",
    "spotipy",
    "lyricsgenius",
    "nagisa",
    "lmdeploy",
    "audio-separator"
]

[[tool.uv.index]]
name = "pytorch-cu126"
url = "https://download.pytorch.org/whl/cu126"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu126" }
torchvision = { index = "pytorch-cu126" }
torchaudio = { index = "pytorch-cu126" }